anja summary.css scrollbar and heigth of greetingContainer-and-subMainSummary not yet solved though

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -224,12 +224,28 @@ input[type="password"]:focus {
   transform: translate(-50%, -50%);
 }
 
+.blue-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--clr-main);
+  color: #fff;
+  opacity: 1;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  overflow: hidden;
+  /* animation: fadingOverlay 5s ease-in-out; */
+}
+
 .logo-animation {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  animation: move-logo 2s ease-in-out;
+  /* animation: move-logo 2s ease-in-out; */
 }
 
 @keyframes move-logo {
@@ -246,27 +262,26 @@ input[type="password"]:focus {
   }
 }
 
-.blue-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--clr-main);
-  color: #fff;
-  /* display: none; */
-  opacity: 1;
-  animation: fadingOverlay 5s ease-in-out;
-}
-
-@keyframes fadingOverlay {
+/* @keyframes fadingOverlay {
   from {
     opacity: 1;
   }
   to {
     opacity: 0;
   }
-}
+} */
+
+/* .logo-animation {
+  animation: moveAndShrink 3s forwards;
+
+  @keyframes moveAndShrink {
+    0% {
+      transform: translate(0, 0) scale(1);
+    }
+    100% {
+      transform: translate(-50vw, -50vh) scale(0.3);
+    }
+  } */
 
 /*
 •	320px — 480px: Mobile devices
